# XStreaming-desktop

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  README.zh_CN.md  electron-builder.yml  index.html  next-i18next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
app/: background.js  preload.js
flatpak/: build_bundle_manually.sh  io.github.Geocld.XStreaming.desktop  io.github.Geocld.XStreaming.metainfo.xml  io.github.Geocld.XStreaming.yml  io.github.Geocld.XStreamingDesktop.desktop  io.github.Geocld.XStreamingDesktop.metainfo.xml  io.github.Geocld.XStreamingDesktop.yml
main/: application.ts  authentication.ts  preload.ts  webui.ts
main/helpers/: achivementmanager.ts  create-window.ts  streammanager.ts  titlemanager.ts  tokenstore.ts  xboxWorker.ts  xcloudapi.ts  xhttp.ts
main/ipc/: app.ts  base.ts  consoles.ts  settings.ts  xcloud.ts
main/xal/: index.ts  tokenstore.ts  xal.ts
renderer/: i18n.ts  next.config.js  styles.css  tailwind.config.js
renderer/.next/: build-manifest.json  trace
renderer/@types/: preload.d.ts
renderer/common/: constans.ts  settings.ts
renderer/lib/: ipc.ts  (+3 more)
resources/: icon.icns
sample/: token.sample.json
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src-tauri/src/api/: gssv.rs  mod.rs  web.rs  xcloud.rs
src-tauri/src/auth/: authenticator.rs  error.rs  extensions.rs  flows.rs  mod.rs  models.rs  request_signer.rs  tokenstore.rs
(+116 files in other folders)
