[package]
name = "xstreaming"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.74"
cvlib = "0.1.2"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0.37"
url = "2.3.1"
http = "0.2.9"
log = "0.4.20"
p256 = "0.13.2"
base64ct = { version = "1.6.0", features = ["std"] }
sha2 = "0.10.8"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
hex-literal = "0.3.4"
oauth2 = "4.4.2"
nt-time = { version = "0.6.5", features = ["chrono"] }
once_cell = "1.19.0"
directories = "4.0.1"

[dev-dependencies]
tokio-test = "0.4.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
